JumpScript/tests/baselines/reference/parserConstructorDeclaration12.errors.txt
tests/cases/compiler/parserConstructorDeclaration12.jump(2,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(2,14): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(2,15): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(3,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(3,14): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(3,15): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(4,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(4,15): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(4,16): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(5,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(5,15): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(5,16): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(6,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(6,14): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(6,15): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(7,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(7,14): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(7,15): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(8,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(8,15): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(8,16): error TS1092: Type parameters cannot appear on a constructor declaration.
tests/cases/compiler/parserConstructorDeclaration12.jump(9,3): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/parserConstructorDeclaration12.jump(9,15): error TS1098: Type parameter list cannot be empty.
tests/cases/compiler/parserConstructorDeclaration12.jump(9,16): error TS1092: Type parameters cannot appear on a constructor declaration.


==== tests/cases/compiler/parserConstructorDeclaration12.jump (24 errors) ====
    class C {
      constructor<>() { }
      ~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                 ~~
!!! error TS1098: Type parameter list cannot be empty.
                  
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor<> () { }
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                 ~~
!!! error TS1098: Type parameter list cannot be empty.
                  
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor <>() { }
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                  ~~
!!! error TS1098: Type parameter list cannot be empty.
                   
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor <> () { }
      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                  ~~
!!! error TS1098: Type parameter list cannot be empty.
                   
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor< >() { }
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                 ~~~
!!! error TS1098: Type parameter list cannot be empty.
                  
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor< > () { }
      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                 ~~~
!!! error TS1098: Type parameter list cannot be empty.
                  
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor < >() { }
      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                  ~~~
!!! error TS1098: Type parameter list cannot be empty.
                   
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
      constructor < > () { }
      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
                  ~~~
!!! error TS1098: Type parameter list cannot be empty.
                   
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
    }